fix sect 3 header overlap

--- a/src/assets/scss/sections/_sect3.scss
+++ b/src/assets/scss/sections/_sect3.scss
@@ -25,7 +25,7 @@
 	.l-wrap{
 		position: relative;
 		@include is-max(920px){
-			padding-right: 0 !important;
+			// padding-right: 0 !important;
 		}
 	}
 
@@ -43,28 +43,31 @@
 		justify-content: flex-end;
 		align-items: flex-end;
 		flex-wrap: wrap;
-
+		position: relative;
 		@include is-max(1091px){
 			justify-content: space-between;
 		}
 
 		@include is-sp {
-			flex-direction: column;
+			// flex-direction: column;
+			align-items: flex-start;
 		}
 
 		.c-content {
 			width: 500px;
 			margin-right: 60px;
-
 			@include is-max(1091px){
 				width: 47%;
 				margin-right: 0;
 			}
 
 			@include is-max(921px){
-				width: 100%;
-				padding-right: 80px;
+				// width: 100%;
+				// padding-right: 50px;
+				width: 86%;
+				// margin-right: auto;
 			}
+			
 
 			h3{
 				font-weight: 700;
@@ -95,6 +98,7 @@
 			@include is-max(921px){
 				width: 100%;
 				margin-top: 35px;
+				order: 3;
 			}
 
 			.kit{
@@ -104,6 +108,8 @@
 				@include is-max(920px){
 					width: 370px;
 					height: 430px;
+					position: relative;
+					right: -30px;
 				}
 			}
 
@@ -118,7 +124,7 @@
 				@include is-max(920px){
 					top: 10px;
 					left: unset;
-					right: 240px;
+					right: 220px;
 					width: 213px;
 					height: 80px;
 				}
@@ -144,6 +150,31 @@
 				display: block;
 			}
 		}
+
+		// .right_features_sp {
+			
+			.right_fea {
+				font-weight: 700;
+				font-family: "Noto Sans JP", sans-serif;
+				@include font-line(28);
+				color: #d88e9b;
+				writing-mode: vertical-rl;
+				display: none;
+				@include is-sp {
+					display: block;
+					position: absolute;
+					z-index: 2;
+					// width: 12%;
+					// order: 2;
+					right: -10px;
+					top: 0;
+				}
+			}
+	
+			// .right-title-primary {
+				
+			// }
+		// }
 	}
 
 	&__relative {
@@ -168,7 +199,7 @@
 
 			@include is-max(921px){
 				width: 100%;
-				padding-right: 80px;
+				padding-right: 50px;
 			}
 
 			h3{
@@ -263,7 +294,7 @@
 
 			@include is-max(921px){
 				width: 100%;
-				padding-right: 80px;
+				padding-right: 50px;
 			}
 
 			h3{
@@ -340,7 +371,7 @@
 		}
 	}
 
-	&__right_features {
+	.right_features_pc {
 		position: absolute;
 		top: 113px;
 		right: -87px;
@@ -351,8 +382,9 @@
 		}
 
 		@include is-sp {
+			display: none;
 			top: 70px;
-			right: 15px;
+			right: 30px;
 		}
 
 		.right_fea {
